--- a/themes/DarkMatter/DarkMatter.theme.css
+++ b/themes/DarkMatter/DarkMatter.theme.css
@@ -30,7 +30,7 @@
 /* Main background and settings background */
 .app,
 .callout-backdrop {
-	background: url(https://i.imgur.com/7SbtKvw.png) !important;
+	background: url(https://image.redbull.com/rbcom/010/2016-06-06/1331798741362_1/0010/1/1600/1067/1/brook-macdonald-in-action-at-uci-fort-william-2016-finals-day.jpg) !important;
 	background-size: cover !important;
 }
 
